2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed jquery clone 
	function incompatibility with iexplorer for bug 3090389

2010-10-20  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_enable_disable_alerts.php: Improved template
	selection to be selected more than one. Added agent selection. (It can
	also be selected more than one.)

	* godmode/include/functions_alerts.php: Added a argument, $id_agents
	array, to get_agents_with_alert_template(). It is used to select
	specific agents in the function.

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	include/ajax/visual_console_builder.ajax.php
	godmode/reporting/visual_console_builder.php: Added the html support
	in the label type items of the visual consoles for pending
	task 3063404

2010-10-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: added hook for "user translation" in function
	"__".
	
	Pending task: #3057674

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed a jquery typo
	for iexplorer browser

2010-10-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_io.php: fixed the function "safe_input" when the
	parameter is a array.

2010-10-18  Sancho Lerena <slerena@artica.es>
	
	* pandoradb.sql: Alter some trecon_task info to avoid problems on new
	custom script items (due the referencial integrity).
	
	* pandoradb_data.sql: Octopods instead octopus.
	
	* godmode/menu.php,
	* godmode/servers/recon_script.php: Added new option to manage recon scripts
	
	* godmode/servers/manage_recontask.php,
	godmode/servers/manage_recontask_form.php: Changes to manage the new recon
	tasks using custom-defined scripts to detect and monitor things (neeed some
	Javascript improvements).
	
2010-10-18  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/insert_data.php: added first version of extension to added