@@ -1,3 +1,10 @@
+2010-10-20  Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* godmode/servers/modificar_server.php: Disable change name of server
+	because it will be trouble updating server status.
+
+	Fixes: #3091297
+
 2010-10-20  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/alerts/alert_list.list.php: Fixed jquery clone 
